crates/lutum/tests/ui/mixed_selectors.stderr
error[E0308]: mismatched types
  --> tests/ui/mixed_selectors.rs:40:9
   |
40 |         OtherToolsSelector::Search,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `AppToolsSelector`, found `OtherToolsSelector`
